style: update user feed & add market performance

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,18 @@
 
       <%= yield %>
     </div>
+
+    <footer class="mt-16">
+      <%= render_separator %>
+      <ul class="flex justify-start items-end gap-4 py-4">
+        <li class="font-semibold text-2xl">Avion</li>
+        <li class="font-semibold text-secondary">Help</li>
+        <li class="font-semibold text-secondary">Send Feedback</li>
+        <li class="font-semibold text-secondary">Privacy</li>
+        <li class="font-semibold text-secondary">Terms</li>
+        <li class="font-semibold text-secondary">Disclaimer</li>
+      <ul>
+    </footer>
     
   </body>
 
