--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -6,41 +6,46 @@
   My Portfolio
 <% end %>
 
-<%= render_separator class: 'my-6'%>
+<%= render_separator class: 'my-6' %>
 
-<div class="flex flext-col gap-2">
-  <%= render_card title: "#{number_to_currency(@total_value, precision: 2)}" do %>
-    <%= area_chart @chart_data, discrete: true, library: { hAxis: { title: 'Stock Symbol' }, vAxis: { title: 'Value' } } %>
-  <% end %>
+<div class="flex flex-col gap-4 lg:flex-row">
+  <div class="w-full lg:w-1/2">
+    <%= render_card title: "#{number_to_currency(@total_value, precision: 2)}", subtitle: "Total Balance", class: "w-full" do %>
+      <%= area_chart @chart_data, 
+        discrete: true, 
+        colors: ["#b00", "#666"],
+        library: { hAxis: { title: 'Stock Symbol' }, vAxis: { title: 'Value' } } %>
+    <% end %>
+  </div>
 
-  <%= turbo_frame_tag "portfolio_frame" do %>
-    <%= render_card title: "Portfolio Overview", class: "w-full p-4" do %>
-      <% if @portfolio.present? %>
-        <%= render_table do %>
-          <%= table_head do %>
-            <%= table_header 'Symbol' %>
-            <%= table_header 'Company Name' %>
-            <%= table_header 'Price' %>
-            <%= table_header 'Quantity' %>
-            <%= table_header 'Change' %>
-            <%= table_header 'Value' %>
-          <% end %>
-          <%= table_body do %>
-            <% @portfolio.each do |stock| %>
-              <%= table_row do %>
-                <%= table_column stock[:symbol] %>
-                <%= table_column stock[:name] %>
-                <%= table_column number_to_currency(stock[:price], precision: 2) %>
-                <%= table_column stock[:quantity].to_s %>
-                <%= table_column stock[:change], class: stock[:change].to_d < 0 ? 'text-destructive' : 'text-success' %>
-                <%= table_column number_to_currency(stock[:value], precision: 2) %>
+  <div class="w-full lg:w-1/2">
+    <%= turbo_frame_tag "portfolio_frame" do %>
+      <%= render_card title: "Portfolio Overview", class: "w-full p-4 bg-secondary text-white" do %>
+        <% if @portfolio.present? %>
+          <%= render_table do %>
+            <%= table_head do %>
+              <%= table_header 'Symbol' %>
+              <%= table_header 'Price' %>
+              <%= table_header 'Quantity' %>
+              <%= table_header 'Change' %>
+              <%= table_header 'Value' %>
+            <% end %>
+            <%= table_body do %>
+              <% @portfolio.each do |stock| %>
+                <%= table_row class: "hover:bg-background" do %>
+                  <%= table_column stock[:symbol], class: "flex justify-center p-2 mx-auto my-2 rounded bg-accent text-secondary text-sm" %>
+                  <%= table_column number_to_currency(stock[:price], precision: 2) %>
+                  <%= table_column stock[:quantity].to_s, class: "text-center" %>
+                  <%= table_column stock[:change], class: "flex justify-center p-2 mx-auto my-2 text-white rounded #{stock[:change].to_d < 0 ? 'bg-destructive' : 'bg-success'}" %>
+                  <%= table_column number_to_currency(stock[:value], precision: 2) %>
+                <% end %>
               <% end %>
             <% end %>
           <% end %>
+        <% else %>
+          <p class="w-full px-6 text-muted-foreground">Your portfolio is empty.</p>
         <% end %>
-      <% else %>
-        <p class="w-full px-6 text-muted-foreground">Your portfolio is empty.</p>
       <% end %>
     <% end %>
-  <% end %>
+  </div>
 </div>
