--- a/app/views/post_mailer/approved_user_email.text.erb
+++ b/app/views/post_mailer/approved_user_email.text.erb
@@ -1,3 +1,3 @@
 Hi <%= @user.first_name %>,
 
-<%= @body %> <%= link_to 'login.', new_user_session_url %>
+<%= @body %> <%= link_to 'login.', new_user_session_url(host: 'localhost:3000') %>
