--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,10 @@
         </div>
         <% if current_user.present? && current_user.role == 'admin' %>
           <%= render 'components/navbar/admin' %>
-        <% else %>
+        <% elsif current_user.present? %>
           <%= render 'components/navbar/user' %>
+        <% else %>
+          <span>Test</span>
         <% end %>
       </nav>
     </header>
