--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head class="h-full">
-    <title>TradingApp</title>
+    <title>Avion Finance</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
