refactor: user feed style

--- a/app/assets/stylesheets/shadcn.css
+++ b/app/assets/stylesheets/shadcn.css
@@ -17,6 +17,7 @@
 		--destructive: 0 66.1% 56.1%;;
 		--destructive-foreground: 210 40% 98%;
     	--success: 120 66.1% 56.1%;
+    	--success-light: 91.6 85.5% 89%;
 		--success-foreground: 210 40% 98%;
 		--border: 214.3 31.8% 91.4%;
 		--input: 214.3 31.8% 91.4%;
