--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,15 +48,15 @@
       <%= yield %>
     </div>
 
-    <footer class="mt-16">
+    <footer class="mt-16 p-6 lg:p-12 lg:pt-24">
       <%= render_separator %>
       <ul class="flex justify-start items-end gap-4 py-4">
         <li class="font-semibold text-2xl">Avion</li>
-        <li class="font-semibold text-secondary">Help</li>
-        <li class="font-semibold text-secondary">Send Feedback</li>
-        <li class="font-semibold text-secondary">Privacy</li>
-        <li class="font-semibold text-secondary">Terms</li>
-        <li class="font-semibold text-secondary">Disclaimer</li>
+        <li class="text-muted-foreground">Help</li>
+        <li class="text-muted-foreground">Send Feedback</li>
+        <li class="text-muted-foreground">Privacy</li>
+        <li class="text-muted-foreground">Terms</li>
+        <li class="text-muted-foreground">Disclaimer</li>
       <ul>
     </footer>
     
