feat: add navigation for home page & update navigations for admin and user roles

--- a/app/views/components/navbar/_admin.html.erb
+++ b/app/views/components/navbar/_admin.html.erb
@@ -1,4 +1,5 @@
 <% links = [
+  { name: 'Dashboard', path: admins_path },
   { name: 'Transactions', path: admin_transactions_path },
   { name: 'Users', path: admin_users_path }
 ]%>
