--- a/app/views/components/navbar/_user.html.erb
+++ b/app/views/components/navbar/_user.html.erb
@@ -1,5 +1,5 @@
 <% links = [
-  { name: 'Feed', path: root_path },
+  { name: 'Feed', path: stocks_path },
   { name: 'Portfolio', path: portfolios_path },
   { name: 'Transactions', path: transactions_path }
 ]%>
