--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <% elsif current_user.present? %>
           <%= render 'components/navbar/user' %>
         <% else %>
-          <span>Test</span>
+          <%= render 'components/navbar/home' %>
         <% end %>
       </nav>
     </header>
