--- a/app/views/stocks_search/_suggestions_form.html.erb
+++ b/app/views/stocks_search/_suggestions_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with url: stocks_details_path, 
   method: :get, 
   class: 'w-full relative flex flex-row gap-2 cursor-pointer select-none items-center 
-  rounded-sm px-2 py-1.5 outline-none overflow-hidden
+  rounded-sm px-2 py-1.5 text-xs outline-none overflow-hidden
   aria-selected:bg-accent aria-selected:text-accent-foreground 
   hover:bg-accent hover:text-accent-foreground 
   data-[disabled]:pointer-events-none data-[disabled]:opacity-50' do |f| %>
