--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag "transaction_frame" do %>
-  <div class='h-full w-full flex items-center justify-center border rounded-lg bg-secondary py-4 shadow-md slide-down'>
+  <div class='h-full w-full flex items-center justify-center border-2 bg-background rounded-lg py-4 shadow-md slide-down'>
     <div class="flex flex-col items-center w-full gap-2 p-4">
       <%= render_tabs do %>
         <%= tab_list do %>
