--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -1,8 +1,8 @@
 <div class="flex gap-4">
-  <%= render_card title: "#{number_to_currency(@balance, precision: 2)}", subtitle: "Account Balance" %>
+  <%= render_card title: "#{number_to_currency(@balance, precision: 2)}", subtitle: "Account Balance", id: "account-balance" %>
 
   <%= turbo_frame_tag "wallet_frame" do %>
-    <div class='h-full w-full flex items-center justify-center border rounded-lg bg-secondary py-4 shadow-md slide-down'>
+    <div class='h-full w-full flex items-center justify-center border rounded-lg bg-background py-4 shadow-md slide-down'>
       <div class="flex flex-col items-center w-full gap-2 p-4">
         <%= render_tabs do %>
           <%= tab_list do %>
