--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,7 +7,7 @@
         <h2 class="text-6xl font-bold">Empowering you to trade smarter and faster</h2>
       </div>
       <div class="w-full">
-        <%= render_button("Get Started", variant: :destructive, as: :link, href: "", class: "text-xl px-16 py-6") %>
+        <%= render_button("Get Started", variant: :destructive, as: :link, href: new_user_registration_path, class: "text-xl px-16 py-6") %>
       </div>
     </div>
     <div class="flex justify-center w-full lg:w-2/5 relative">
