--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -1,6 +1,6 @@
 <div class="flex flex-col justify-center space-y-4 p-4">
   <div class="mb-4">
-    <%= link_to stocks_path, class: "text-gray-500 hover:text-gray-700" do %>
+    <%= link_to home_path, class: "text-gray-500 hover:text-gray-700" do %>
       <i class="fa fa-arrow-left"></i>
     <% end %>
   </div>
