refactor: optimize admin users path
- add content loading to admin users table
- add pagination to admin users table
- adjust routes, controllers, and views to initialize
  admins/users_tables controller

--- a/app/views/admin/users/_users_filters.html.erb
+++ b/app/views/admin/users/_users_filters.html.erb
@@ -10,9 +10,10 @@
   <% filters.each do |link| %>
     <%= render_button link[:name], 
       as: :link, 
-      href: admin_users_path(filter: link[:filter]),
+      href: admin_users_tables_path(filter: link[:filter]),
       variant: :outline,
-      class: 'rounded-3xl w-24'
+      class: 'rounded-3xl w-24 text-xs',
+      data: { turbo_frame: :users_tables }
     %>
   <% end %>
 </div>
