--- a/app/views/admin/approve_roles/_approved_form.html.erb
+++ b/app/views/admin/approve_roles/_approved_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(user, url: admin_approve_role_path(user), method: :patch, data: { controller: 'auto-submit' }, html: { id: "approve_form_#{user.id}" }) do |f| %>
+<%= form_for(user, url: admin_approve_roles_path(user), method: :patch, data: { controller: 'auto-submit' }, html: { id: "approve_form_#{user.id}" }) do |f| %>
   <% checked = user.approved === "true" ? "checked" : "" %>
   <%= f.check_box :approved, 
     { data: { action: 'auto-submit#submit', state: checked }, 
