--- a/app/views/admin/user_roles/_role_form.html.erb
+++ b/app/views/admin/user_roles/_role_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(user, url: admin_user_role_path(user), 
+<%= form_for(user, url: admin_user_roles_path(user), 
              method: :patch, 
              data: { controller: 'auto-submit' }, 
              html: { id: "role_form_#{user.id}" }) do |f| %>
