refactor: add users namespace and move relevant controllers
- add users namespace in routes file
- change name: admin/users_tables --> users/lists
- change name: admin/approve_roles --> users/approvals
- update controllers and paths in views

--- a/app/views/users/approvals/_form.html.erb
+++ b/app/views/users/approvals/_form.html.erb
@@ -1,5 +1,6 @@
-<%= form_for(user, url: admin_approve_roles_path(user), method: :patch, data: { controller: 'auto-submit' }, html: { id: "approve_form_#{user.id}" }) do |f| %>
+<%= form_for(user, url: users_approvals_path(user), method: :patch, data: { controller: 'auto-submit' }, html: { id: "approve_form_#{user.id}" }) do |f| %>
   <% checked = user.approved === "true" ? "checked" : "" %>
+  <%= f.hidden_field :id, value: user.id %>
   <%= f.check_box :approved, 
     { data: { action: 'auto-submit#submit', state: checked }, 
       id: "approved_checkbox_#{user.id}",
