--- a/app/views/admin/users/_users_filters.html.erb
+++ b/app/views/admin/users/_users_filters.html.erb
@@ -10,7 +10,7 @@
   <% filters.each do |link| %>
     <%= render_button link[:name], 
       as: :link, 
-      href: admin_users_tables_path(filter: link[:filter]),
+      href: users_lists_path(filter: link[:filter]),
       variant: :outline,
       class: 'rounded-3xl w-24 text-xs',
       data: { turbo_frame: :users_tables }
