--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,9 +1,10 @@
-<ul class="flex flex-row gap-2 p-2 mb-4">
+<ul class="flex flex-col lg:flex-row gap-2 p-2 mb-4">
+  <%= render partial: 'users/search' %> 
   <%= render 'users_filters' %>
 </ul>
 
 <%= render_card class: 'h-full w-full min-w-[350px] p-6 overflow-hidden' do %>
-  <%= turbo_frame_tag :users_tables, src: users_lists_path(filter: params[:filter])  do %>
+  <%= turbo_frame_tag :users_table, src: users_lists_path(filter: params[:filter])  do %>
     <%= 10.times do %>
       <%= render_skeleton %>
     <% end %>
