style: improve responsiveness

--- a/app/assets/stylesheets/shadcn.css
+++ b/app/assets/stylesheets/shadcn.css
@@ -26,14 +26,10 @@
 	}
 
 	* {
-		@apply box-border;
+    box-sizing: border-box;
 	}
-
-	body {
-		@apply bg-background text-foreground;
-	}
-
 }
+
 
 @layer utilities {
   .error {
