--- a/app/views/users/approvals/_form.html.erb
+++ b/app/views/users/approvals/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.check_box :approved, 
     { data: { action: 'auto-submit#submit', state: checked }, 
       id: "approved_checkbox_#{user.id}",
-      class: "peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
+      class: "peer h-4 w-4 shrink-0 rounded-sm ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
     },
       "true", "false" %>
 <% end %>
