chore: add volume data and optimize code
- add memoization to model calls
- add transaction type distinction for buy and sell transactions
- utilize value param to implement transaction volume

--- a/app/views/admins/_chart_transactions_type.html.erb
+++ b/app/views/admins/_chart_transactions_type.html.erb
@@ -1,3 +1,3 @@
-<%= pie_chart @transactions.group(:transaction_type).count,
+<%= pie_chart @transactions_summary,
   colors: ['#d94545', '#122842']
 %>
