--- a/app/views/transactions/_form_for_deposit_or_withdraw.html.erb
+++ b/app/views/transactions/_form_for_deposit_or_withdraw.html.erb
@@ -1,8 +1,8 @@
-<%= render_form_for(@wallet) do |form| %>
+<%= render_form_for(transaction) do |form| %>
   <div class="flex items-end gap-2">
     <div class="flex flex-col justify-start">
-      <%= form.label :amount, class: "py-2" %>
-      <%= form.number_field :amount, placeholder: "0.00", autofocus: true, autocomplete: "off", class: "py-2" %>
+      <%= form.label :quantity, class: "py-2" %>
+      <%= form.number_field :quantity, placeholder: "0.00", autofocus: true, autocomplete: "off", class: "py-2" %>
     </div>
 
     <div>
