fix: landing page responsiveness

--- a/app/views/components/shared/_footer.html.erb
+++ b/app/views/components/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <%= render_separator %>
-<ul class="w-full flex justify-start items-end gap-4 py-4">
+<ul class="w-full flex justify-start items-end gap-4">
   <li class="font-semibold text-2xl">Avion</li>
   <li class="text-muted-foreground">Help</li>
   <li class="text-muted-foreground">Send Feedback</li>
