--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
       <% end %>
     </div>
 
-    <div class="container mt-16 lg:mt-0">
+    <div class="container flex-grow mt-16 lg:mt-0">
       <div class="w-full fixed top-0 left-0 z-50 p-4">
         <div class="flex flex-col-reverse lg:flex-row justify-center items-start gap-2 mt-16">
           <%= turbo_frame_tag "details", class: "w-full lg:w-1/2 bg-white rounded-lg", data: { toggle_frame_target: "detail" } %>
@@ -51,7 +51,7 @@
       <%= yield %>
     </div>
 
-    <footer class="w-full mt-16 p-6 lg:p-12 lg:pt-24">
+    <footer class="container w-full mt-16 lg:pt-24">
       <%= render "components/shared/footer" %>
     </footer>
     
