--- a/app/views/transactions/_form_for_deposit_or_withdraw.html.erb
+++ b/app/views/transactions/_form_for_deposit_or_withdraw.html.erb
@@ -7,6 +7,7 @@
 
     <div>
       <%= form.hidden_field :transaction_type, value: transaction_type, class: "form-control" %>
+      <%= form.hidden_field :symbol, value: current_user.wallet.currency %>
       <%= form.submit transaction_type.capitalize, class: "p-4 cursor-pointer button button-primary w-[200px]" %>
     </div>  
   </div>
