--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -8,24 +8,28 @@
 
 <%= render_separator class: 'my-6' %>
 
-<div class="flex flex-col lg:flex-row gap-2">
-  <%= render_card title: "#{number_to_currency(@total_value, precision: 2)}", subtitle: "Total Gain", class: "w-full lg:w-3/4" do %>
+<div class="flex flex-col lg:flex-row gap-2 w-full">
+  <%= render_card title: "#{number_to_currency(@total_value, precision: 2)}", subtitle: "Total Value", class: "w-full lg:w-1/2" do %>
     <div class="flex flex-col">
       <%= pie_chart @chart_data, 
         discrete: true, 
-        colors: generate_random_colors(0..30, @chart_data.count),
+        colors: generate_random_colors(0..60, @chart_data.count),
         legend: true,
-        legend_position: "bottom" %>
-      <%= area_chart @chart_data, 
-        discrete: true, 
-        library: { hAxis: { title: 'Stock Symbol' }, vAxis: { title: 'Value' } },
-        colors: ["#b00","666"] %>
+        legend_position: "bottom",
+        donut: true %>
+      <%= area_chart @chart_data,
+        library: { 
+          hAxis: { title: 'Stock Symbol' }, 
+          vAxis: { title: 'Value' },
+          pointSize: 5,
+          curveType: 'function' },
+        colors: ["#b00", "#666"] %>
     </div>
   <% end %>
 
-  <div class="w-full lg:w-1/4">
+  <div class="w-full lg:w-1/2">
     <%= turbo_frame_tag "portfolio_frame" do %>
-      <%= render_card class: "w-full p-4 " do %>
+      <%= render_card class: "w-full p-4 overflow-x-auto" do %>
         <div class="flex items-center gap-2 py-6">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-10 h-10">
             <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 14.25v2.25m3-4.5v4.5m3-6.75v6.75m3-9v9M6 20.25h12A2.25 2.25 0 0 0 20.25 18V6A2.25 2.25 0 0 0 18 3.75H6A2.25 2.25 0 0 0 3.75 6v12A2.25 2.25 0 0 0 6 20.25Z" />
