refactor: replace links to root_path with home_path and cached sector performance

--- a/app/views/sector_performance/_chart.html.erb
+++ b/app/views/sector_performance/_chart.html.erb
@@ -3,8 +3,6 @@
     id: "sec-performance-chart", 
     xtitle: 'Sector',
     ytitle: 'Performance',
-    colors: ["#b00", "#666"],
-    loading: "Loading...",
-    curve: true
+    colors: ["#b00", "#666"]
   %>
 <% end %>
