--- a/app/views/post_mailer/approved_user_email.html.erb
+++ b/app/views/post_mailer/approved_user_email.html.erb
@@ -1,3 +1,3 @@
 <p>Hi <%= @user.first_name %>,</p>
 
-<p><%= @body %> <%= link_to 'login.', new_user_session_url(host: 'localhost:3000') %></p>
+<p><%= @body %> <%= link_to 'login.', new_user_session_url(host: Rails.env.development? ? 'localhost:3000' : Rails.application.credentials.dig(:HOST_URL)) %></p>
