Revert "refactor: rendering transaction path through buy/sell button"

--- a/app/views/sector_performance/_chart.html.erb
+++ b/app/views/sector_performance/_chart.html.erb
@@ -3,6 +3,8 @@
     id: "sec-performance-chart", 
     xtitle: 'Sector',
     ytitle: 'Performance',
-    colors: ["#b00", "#666"]
+    colors: ["#b00", "#666"],
+    loading: "Loading...",
+    curve: true
   %>
 <% end %>
