style: remove class text-white on transaction form labels & replace quantity with amount on wallet form label

--- a/app/views/transactions/_form_for_deposit_or_withdraw.html.erb
+++ b/app/views/transactions/_form_for_deposit_or_withdraw.html.erb
@@ -1,7 +1,7 @@
 <%= render_form_for(transaction) do |form| %>
   <div class="flex items-end gap-2">
     <div class="flex flex-col justify-start">
-      <%= form.label :quantity, class: "py-2" %>
+      <%= form.label "Amount", class: "py-2" %>
       <%= form.number_field :quantity, placeholder: "0.00", autofocus: true, autocomplete: "off", class: "py-2" %>
     </div>
 
