--- a/app/views/transactions/create.turbo_stream.erb
+++ b/app/views/transactions/create.turbo_stream.erb
@@ -12,6 +12,9 @@
   <%= turbo_stream.update "portfolio_table_frame" do %>
     <%= render partial: "portfolios/portfolio_table", locals: { portfolio: @portfolio } %>
   <% end %>
+  <%= turbo_stream.update "portfolio_charts_frame" do %>
+    <%= render partial: "portfolios/portfolio_charts", locals: { total_value: @total_value, chart_data: @chart_data } %>
+  <% end %>
 <% end %>
 
 <%= turbo_stream.update "transaction_buy_frame" %>
