feat: implement search transactions in admin transactions page

--- a/app/views/admin/transactions/index.html.erb
+++ b/app/views/admin/transactions/index.html.erb
@@ -1,35 +1,12 @@
-<% headers = ['Id', 'Symbol', 'Type', 'Price', 'User Id', 'Created At'] %>
+<div class='flex flex-row gap-4 w-full mb-4'>
+  <%= render partial: 'search' %>
+  <%= render partial: 'filters' %>
+</div>
+
+
 <%= render_card class: 'w-full p-6 overflow-x-auto' do %>
-  <%= render_table do %>
-    <%= table_head do %>
-      <% headers.each do |header| %>
-        <%= table_header header %>
-      <% end %>
-    <% end %>
-    <%= table_body do %>
-      <% @transactions.each do |transaction| %>
-        <%= table_row do %>
-          <%= table_column do %>
-            <%= link_to transaction.id.to_s, admin_user_path(transaction.user_id) %> 
-          <% end %>
-          <%= table_column do %>
-            <%= link_to transaction.symbol, admin_user_path(transaction.user_id) %>
-          <% end %>
-          <%= table_column do %>
-            <%= link_to transaction.transaction_type, admin_user_path(transaction.user_id) %>
-          <% end %>
-          <%= table_column do %>
-            <%= link_to number_to_currency(transaction.price, precision: 2), admin_user_path(transaction.user_id) %>
-          <% end %>
-          <%= table_column do %>
-            <%= link_to transaction.user_id.to_s, admin_user_path(transaction.user_id) %>
-          <% end %>
-          <%= table_column do %>
-            <%= link_to transaction.created_at.strftime('%Y-%m-%d'), admin_user_path(transaction.user_id) %>
-          <% end %>
-        <% end %>
-      <% end %>
-    <% end %>
+  <%= turbo_frame_tag 'transactions' do %>
+    <%= render partial: 'admin_transactions_table' %>
   <% end %>
 
   <div class='flex w-full justify-center'>
