style: add responsive classes

--- a/app/views/admin/transactions/_search.html.erb
+++ b/app/views/admin/transactions/_search.html.erb
@@ -1,4 +1,4 @@
-<%= render_card class: 'h-fit' do %>
+<%= render_card class: 'h-fit w-full' do %>
   <%= form_with url: transactions_search_path, 
     method: :get, 
     data: { controller: 'auto-submit' },
