--- a/app/views/admin/transactions/_filters.html.erb
+++ b/app/views/admin/transactions/_filters.html.erb
@@ -6,14 +6,14 @@
   { name: 'Withdraw', filter: 'withdraw' }
 ] %>
 
-<div class='flex flex-row gap-4 w-full text-muted-foreground'>
+<div class='flex flex-row gap-4 w-full min-w-[350px] overflow-auto text-muted-foreground'>
   <% filters.each do |link| %>
     <%= render_button link[:name], 
       as: :link, 
       href: admin_transactions_path(filter: link[:filter]),
       data: { turbo_frame: 'transactions' },
       variant: :outline,
-      class: 'rounded-3xl w-24 text-xs'
+      class: 'h-fit w-fit text-xs px-4 py-1.5 rounded-full'
     %>
   <% end %>
 </div>
